<resources>
    <string name="app_name">DroneforceMobile</string>
    <string name="hello_world">Hello World!</string>
    <string name="welcome">DroneForce</string>
    <string name="welcomeSmallMsg">Tap here to continue</string>
    <string name="title_activity_sensor_readings">SensorReadings</string>
    <string name="title_activity_sensor_reading">SensorReading</string>

    <string-array name="main_menu_option_list">
        <item>Connect to drone</item>
        <item>View Sensor Information</item>
        <item>Settings</item>
    </string-array>
    <string name="auto_takeoff">A.T.O</string>
    <string name="emergency_land">Em. Land</string>
    <string name="drone_name">Drone Name</string>
    <string name="drone_battery">Battery</string>
    <string name="drone_state">State</string>
    <string name="drone_action">Action</string>
    <string name="drone_finder">Looking for drones, please wait!</string>
    <string name="grant_and_restart">Please grant the permissions and restart the app</string>
    <string name="title_activity_connect_drone">ConnectDrone</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
</resources>
